--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 "scripts": {
-  "start": "node src/index.js"
-}{
+  "start": "node index.js"
+}
+{
   "name": "tvpass-proxy",
   "version": "1.0.0",
   "main": "index.js",
