--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "tvpass-proxy",
+  "name": "simple-proxy",
   "version": "1.0.0",
-  "description": "Proxy for tvpass links",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
