--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "private-dot-dns-server",
   "version": "1.0.0",
   "description": "A private DNS-over-TLS resolver using Google's DoT",
-  "main": "index.js",
+  "main": "node.js",
   "scripts": {
-    "start": "index.js"
+    "start": "node.js"
   },
   "dependencies": {
     "dns2": "^2.0.0"
