--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "private-dot-dns-server",
+  "name": "dns-over-tls-api",
   "version": "1.0.0",
-  "description": "A private DNS-over-TLS resolver using Google's DoT",
-  "main": "index.js",
+  "description": "HTTP-based DNS-over-TLS resolver using Google DNS",
+  "main": "node.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node node.js"
   },
   "dependencies": {
-    "dns2": "^2.0.0"
+    "express": "^4.18.2",
+    "tls": "^0.0.1",
+    "dns-packet": "^5.6.4"
   },
   "engines": {
     "node": ">=16"
